# psa-apm-reboot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/components/sensors/cam_info_publisher/: CMakeLists.txt  README.md  package.xml
src/components/sensors/ehmi_driver/: README.md
src/components/sensors/honeywell/: LICENSE  README.md
src/components/sensors/novatel/: README.md
src/components/sensors/rslidar_helios/: .gitignore
src/config/aios_config/: CMakeLists.txt  PSA_APM_8380_aios_config.bash  PSA_APM_8381_aios_config.bash  _aios_config.bash  apm_rosconsole.conf  apm_rosconsole_debug.conf  package.xml
src/config/aios_config/aios_params/: aios_params_pub.yaml
src/config/aios_config/env-hooks/: 50.aios_config.bash.em  50.aios_config.bash_template.em
src/config/aios_config/model/: truck.urdf
src/config/aios_config/rosbag_record/: aisd_rosbag_recorder.launch  bkp_rosbag_recorder.launch  topics.txt
src/config/aios_config/rtk_config/: rtk_config.yaml
src/config/aios_config/rviz/: aios-rviz-config-update.rviz  demo02.rviz  fordemo.rviz
src/config/aios_config/traffic_light/: aios_traffic_light_management.launch  traffic_light_management.yaml
src/config/psa_apm_aidc_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aidc_config/launch/: ONEsetlight.launch  aidc_bridge.launch
src/config/psa_apm_aide_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aide_config/config/: aide_preprocess_global_config.yaml  global_aide2aidc_bridge_config.yaml  gnss_localization.yaml  gnss_management.yaml  gnss_preprocessing.yaml  imu_config.yaml  imu_preprocessing.yaml
src/config/psa_apm_aide_config/launch/: aide_script_localization_v2.launch  gnss_localization.launch  gnss_management.launch  gnss_preprocessing.launch  imu_heading.launch  imu_preprocessing.launch  map_server.launch  sm_localization.launch
src/config/psa_apm_aipe_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aipe_config/cfg/: blacklist_objects.yaml  lane_detection.yaml  lidar_heavy_rain_detection.yaml  lidar_rain_noise_removal.yaml  psa_apm_aipe_config.yaml  trafficlight_classifier.yaml  trailer_roi.yaml  vision2lidar_whitelist_objects.yaml  yolo_apm.yaml  yolov7.yaml
src/config/psa_apm_aipe_config/launch/: aipe_camera.launch  aipe_lidar.launch  aipe_sensor_fusion.launch  lidar_heavy_rain_detection.launch  lidar_rain_noise_removal.launch  trafficlight_classifier.launch  yolo_apm.launch  yolov7_apm.launch
src/config/psa_apm_airs_config/: CMakeLists.txt  package.xml
src/config/psa_apm_airs_config/config/: airs_rosconsole.conf  psa_apm_airs_bridge_config.yaml
src/config/psa_apm_airs_config/launch/: airs_bridge.launch
src/config/psa_apm_aisc_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aisc_config/situation_cognition/: situation_cognition.yaml
src/config/psa_apm_aisd_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aisd_config/launch/: apm_diagnostic.launch  database_logging.launch
src/config/psa_apm_aise_config/: CMakeLists.txt  package.xml
src/config/psa_apm_aise_config/digital_env/: AISE-PSA-T2_v3.0.0.aise
src/config/psa_apm_aise_config/launch/: aise.launch
src/config/psa_apm_core_config/: CMakeLists.txt  package.xml
src/config/psa_apm_sensor_config/: CMakeLists.txt  package.xml
src/config/psa_apm_sensor_config/cameras/: Cpp_Acquisition_SensorBinning  camera.launch  camera_lucid.launch
src/config/psa_apm_sensor_config/imu/: hg4930_imu_8380.launch  n580_raw_start_8381.launch
src/config/psa_apm_sensor_config/lidar/: lidar_apm.launch  lidar_points_concat_filter.launch  lidar_shared_config.yaml  rs16_simulation.launch  rs_helios_simulation.launch  rslidar_sdk_apm.launch  rslidar_sdk_apm_simulation.launch
src/config/psa_apm_sensor_config/radar/: radar_smartmicro.launch
src/config/virtualenv_config/: CMakeLists.txt  README.md  package.xml  requirements-cuda.txt  requirements.txt
src/config/virtualenv_config/env-hooks/: 50.virtualenv_source.bash.em
src/core/avcs_handler/: CMakeLists.txt  package.xml
src/core/avcs_handler/config/: avcs_handler_config.yaml  mqtt_client_config.yaml
src/core/avcs_handler/launch/: avcs_handler.launch
src/core/avcs_handler/src/: avcs_handler.cpp
src/core/deprecated_pkgs/component_preprocessing/: CMakeLists.txt  README.md  package.xml
src/core/deprecated_pkgs/junction_id_publisher/: CMakeLists.txt  README.md  package.xml
src/core/deprecated_pkgs/v2i_control/: CMakeLists.txt  README.md  package.xml
src/core/psa_apm_system_monitoring/: CMakeLists.txt  package.xml
src/core/psa_apm_system_monitoring/launch/: core_system_monitoring.launch
src/core/psa_apm_system_monitoring/src/: core_system_monitoring.cpp
src/core/remote_handler/: CMakeLists.txt  README.md  package.xml
src/core/remote_handler/config/: remote_handler_config.yaml
src/core/remote_handler/launch/: pcd_publisher.launch  remote_handler.launch
src/core/remote_handler/script/: polygon_pub.py
src/core/remote_handler/src/: README.md  publish_marker.cpp  publish_pcd.cpp  remote_handler.cpp  vehicle_pose.cpp
src/core/remote_ops/: CMakeLists.txt  README.md  package.xml
src/core/remote_ops/config/: remote_console_config.yaml  remote_mqtt_client_config.yaml
src/core/remote_ops/launch/: remote_console.launch  remote_console_ORG.launch  remote_mqtt_client.launch
src/core/remote_ops/msg/: ac_control_cmd.capnp  adjust_position_by_distance_cmd.capnp  breaklink.capnp  complete_job_cmd.capnp  ego_state.capnp  emergency_brake_cmd.capnp  fog_light_cmd.capnp  gear_cmd.capnp  hazard_light_cmd.capnp  head_light_cmd.capnp  horn_cmd.capnp  ignition_cmd.capnp  indicator_light_cmd.capnp  light_state_cmd.capnp  linkup.capnp  manual_reroute_cmd.capnp  marker.capnp  marker_array.capnp  message.capnp  nudge_forward_cmd.capnp  ops_response.capnp  path.capnp  pause_resume_cmd.capnp  pcd.capnp  ping.capnp  polygon.capnp  precedence_override_cmd.capnp  (+15 more)
src/core/runtime_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/core/v2i_handler/: CMakeLists.txt  package.xml
(+1265 files in other folders)
