<?xml version="1.0"?>
<package format="2">
  <name>psa_apm_aipe_config</name>
  <version>0.0.0</version>
  <description>The psa_apm_aipe_config package</description>
  <maintainer email="batuhan@todo.todo">mahi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
