<?xml version="1.0"?>
<package format="2">
  <name>psa_apm_aisc_config</name>
  <version>0.0.0</version>
  <description>The psa_apm_aisc_config package</description>
  <maintainer email="donald@todo.todo">donald</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
