<?xml version="1.0"?>
<package format="2">
  <name>avcs_handler</name>
  <version>0.0.0</version>
  <description>The avcs_handler package</description>
  <maintainer email="mahindan@aidrivers.ai">Mahi</maintainer>
  <license>AIOS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aios_apm_msgs</depend>
  <depend>aidc_msgs</depend>
  <depend>aide_apm_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gps_common</depend>
  <depend>pcl_ros</depend>

  <depend>nlohmann</depend>
  <depend>nlohmann-json-dev</depend>
</package>
