<?xml version="1.0"?>
<package format="2">
  <name>remote_handler</name>
  <version>0.0.0</version>
  <description>The remote_handler package</description>
  <maintainer email="zeynep@aidrivers.ai">Zeynep</maintainer>
  <license>AIOS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>aios_apm_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>aios_lib</depend>
  <depend>nlohmann</depend>
  <depend>nlohmann-json-dev</depend>
   
 
</package>
