<?xml version="1.0"?>
<package format="2">
  <name>remote_ops</name>
  <version>0.0.0</version>
  <description>remote_ops package</description>
  <maintainer email="zeynep@aidrivers.ai">Zeynep</maintainer>
  <license>AID</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>capnproto</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nlohmann</build_depend>
  <build_depend>aios_lib</build_depend>
 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>aios_lib</build_export_depend>
  <build_export_depend>nlohmann</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>capnproto</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>remote_handler</exec_depend>
  <exec_depend>nlohmann</exec_depend>
  <exec_depend>aios_lib</exec_depend>
 
  <depend>PahoMqtt</depend>
 
  <export>
  </export>
</package>
