<?xml version="1.0"?>
<package>
    <name>cam_info_publisher</name>
    <version>0.0.1</version>
    <description>The camera calibration publisher package</description>
    <maintainer email="luke@aidrivers.ai">Luke Taylor</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>libnlopt-dev</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>libxml2</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nlopt</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>libxml2</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
</package>
