<?xml version="1.0"?>
<package format="2">
  <name>component_preprocessing</name>
  <version>1.0.0</version>
  <description>The component_preprocessing package</description>

  <maintainer email="batuhan@aidrivers.ai">temp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>aisc_msgs</depend>
  <depend>aide_apm_msgs</depend>
  <depend>airs_msgs</depend>
  <depend>aidc_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
