<?xml version="1.0"?>
<package format="2">
    <name>junction_id_publisher</name>
    <version>0.0.1</version>
    <description>V2I control node</description>
    <maintainer email="batuhan@aidrivers.ai">Batuhan Baskurt</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>sensor_msgs</depend>
    <depend>aipe_msgs</depend>
    <depend>aisc_msgs</depend>
    <depend>aios_apm_msgs</depend>
    <depend>aifo_client</depend>
    <depend>airs_msgs</depend>
    <depend>rostest</depend>
    <depend>rosunit</depend>
    <depend>jsk_recognition_utils</depend>
    <depend>tf_conversions</depend>
    <depend>jsk_topic_tools</depend>
    <depend>visualization_msgs</depend>
    <depend>traffic_light_common</depend>

</package>
